<resources>
    <string name="app_name">Todo List</string>
    <string name="plus_sign">+</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="completed">Completed</string>
    <string name="today">Today</string>
    <string name="tasks">tasks</string>
    <string name="save">Save</string>
    <string name="what_to_do">What do you need to do?</string>
    <string name="go_right">></string>
    <string name="todo_title">T O D O</string>
    <string name="list">L I S T</string>
    <string name="create">Create</string>
    <string name="todo_list_title">Your Todo List Title</string>
    <string name="close_icon">close icon</string>
    <string name="individual_list">individual list</string>
    <string name="pair_rows">pair rows</string>
    <string name="add_icon">add icon</string>
    <string name="home_icon">home icon</string>
    <string name="edit">edit</string>
    <string name="check_save">check save</string>
    <string name="clear_changes">clear changes</string>
    <string name="new_todoTitle">New TodoList Title Here</string>
    <string name="top_box">top box </string>
    <string name="confirm_delete">Confirm Todo List Deletion</string>
    <string name="items_in_list">There are still todo items in this list do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="counter">counter</string>
    <string name="black_bar">black bar</string>
    <string name="go_back">go back</string>
    <string name="delete">Delete</string>
    <string name="completed_title">Your Completed Items</string>
    <string name="tasks_completed">tasks completed</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="set_due_time">Set Due Time</string>
    <string name="invalid_time">Set time more than 5 minutes in the future</string>
    <string name="channel_name">TodoExpiry</string>
    <string name="channel_description">Notification sent for expired todo item</string>
    <string name="arrow_back">arrow back</string>
    <string name="new_itemTitle">New Title For Todo Item</string>
    <string name="add_description_toTodo">Add a description to your todo item</string>
    <string name="delete_forever">delete forever</string>
    <string name="camera_icon">camera icon</string>
    <string name="add_photo">Attach Photo</string>
    <string name="attach_image">Attach an Image</string>
    <string name="choose_photo_opt">Choose an option to get your photo</string>
    <string name="from_camera">Camera</string>
    <string name="from_library">Library</string>
    <string name="confirm_delete_item">Confirm Deletion Of Todo Item</string>
    <string name="delete_todoItem">This todo item will be deleted forever do you confirm?</string>
    <string name="listID">LIST_ID</string>
    <string name="itemID">ITEM_ID</string>
    <string name="dueDate">DUE_DATE</string>
    <string name="notifID">NOTIF_ID</string>
    <string name="TodoItemhasExpired">Your Todo item has expired!</string>
</resources>